--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Summarizer</title>
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body class="bg-gradient-to-br from-white via-gray-50 to-gray-100 min-h-screen flex items-center justify-center px-4 py-10 text-gray-800">
 
@@ -32,15 +28,17 @@
           placeholder="Paste your content here (Min 200 characters)..."
           class="w-full p-4 text-sm rounded-2xl border border-gray-300 bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none transition"
         ></textarea>
+        <p id="word-count" class="word-count">Words: 0</p>
       </div>
 
       <!-- Button -->
       <div class="text-center">
         <button
           id="submit-button"
-          class="bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-medium py-2.5 px-6 rounded-full shadow transition active:scale-95"
+          class="submit-button"
+          disabled
         >
-          ✨ Summarize Now
+          <span class="submit-button-text">✨ Summarize Now</span>
         </button>
       </div>
 
